<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.covid_matiari.ui.sections.SectionIM1Activity" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- im1_title1  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvim1_title1"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/im1title1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- imtitle2  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvimtitle2"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/imtitle2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- im01  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvim01"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_im01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_im01"
                            android:text="@string/im01" />

                        <TextView
                            android:id="@+id/q_im01"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_im01"
                            android:layout_alignBottom="@id/qtxt_im01"
                            android:text="@string/Q_im01" />

                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/im01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/im011"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im011" />

                        <RadioButton
                            android:id="@+id/im012"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im012" />

                        <RadioButton
                            android:id="@+id/im013"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im013" />

                        <RadioButton
                            android:id="@+id/im014"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im014" />

                        <RadioButton
                            android:id="@+id/im015"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im015" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- im02  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvim02"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_im02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_im02"
                            android:text="@string/im02" />

                        <TextView
                            android:id="@+id/q_im02"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_im02"
                            android:layout_alignBottom="@id/qtxt_im02"
                            android:text="@string/Q_im02" />

                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/im02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/im021"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/im021" />

                        <RadioButton
                            android:id="@+id/im022"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/im022" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- im02a  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvim02a"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_im02a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_im02a"
                            android:text="@string/im02a" />

                        <TextView
                            android:id="@+id/q_im02a"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_im02a"
                            android:layout_alignBottom="@id/qtxt_im02a"
                            android:text="@string/Q_im02a" />

                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/im02a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/im02a1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a1" />

                        <RadioButton
                            android:id="@+id/im02a2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a2" />

                        <RadioButton
                            android:id="@+id/im02a3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a3" />

                        <RadioButton
                            android:id="@+id/im02a4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a4" />

                        <RadioButton
                            android:id="@+id/im02a5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a5" />

                        <RadioButton
                            android:id="@+id/im02a6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a6" />

                        <RadioButton
                            android:id="@+id/im02a96"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/im02a96" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- im04 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvim04"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_im04"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_im04"
                            android:text="@string/im04" />

                        <TextView
                            android:id="@+id/q_im04"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_im04"
                            android:layout_alignBottom="@id/qtxt_im04"
                            android:text="@string/Q_im04" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/im04dd" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/im04dd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:enabled='@{im04dd1.checked ? false : true}'
                            android:gravity="center"
                            android:hint="@string/im04dd"
                            android:inputType="number"
                            android:maxLength="2"
                            android:text='@{im04dd1.checked ? "" : im04dd.getText().toString()}'
                            app:defaultValue="98"
                            app:maxValue="31"
                            app:minValue="1"
                            app:type="range" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/im04mm" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/im04mm"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:hint="@string/im04mm"
                            android:inputType="number"
                            android:maxLength="2"
                            app:maxValue="12"
                            app:minValue="1"
                            app:type="range" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/im04yy" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/im04yy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:hint="@string/im04yy"
                            android:inputType="number"
                            app:maxValue="0"
                            app:minValue="0"
                            app:type="range" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/im04dd1"
                        style="@style/checkbox"
                        android:tag="-1"
                        android:text="@string/im04dd1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
            <!--EndButton LinearLayout-->


        </LinearLayout>

    </ScrollView>

</layout>